Extend authentication and role management features
- Enhance JWT encoder/decoder logic with improved key handling and logging.
- Add new role permissions (read, create, update, delete).
- Update security configuration to allow unauthenticated access for authentication APIs.
- Refactor `AuthController` for cleaner dependency injection and JWS header customization.
- Modify `DataInitializer` to include `ROLE_LIST` permission for default user role.
- Update logging configuration for more detailed security debugging.